[package]
name = "cresca"
version = "0.2.0"
authors = ["Lfu001 <goodspeed913@gmail.com>"]
description = "A tool to partially review the pull requests."
repository = "https://github.com/Lfu001/cresca"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
colored = "2.1.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.24.0"
